--- a/app/src/main/res/layout/item_todo_section.xml
+++ b/app/src/main/res/layout/item_todo_section.xml
@@ -32,10 +32,25 @@
         android:lines="1"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/ivExpandState"
+        app:layout_constraintEnd_toStartOf="@+id/tvCounter"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="Done" />
+
+    <TextView
+        android:id="@+id/tvCounter"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:lines="1"
+        android:maxLines="1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/ivExpandState"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="(34/42)" />
+
 
     <View
         android:layout_width="0dp"
