--- a/app/src/main/res/layout/fragment_todos.xml
+++ b/app/src/main/res/layout/fragment_todos.xml
@@ -8,9 +8,11 @@
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rvTodos"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginBottom="8dp"
         android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/btnAddSection"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
