--- a/app/src/main/res/layout/fragment_todos.xml
+++ b/app/src/main/res/layout/fragment_todos.xml
@@ -41,7 +41,7 @@
         android:layout_marginTop="8dp"
         android:background="@android:color/white"
         android:padding="16dp"
-        android:text="Sections not found"
+        android:text="@string/lbl_sections_empty"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +54,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
-        android:text="Add section"
+        android:text="@string/btn_add_section"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
